9715
The interaction with static annotations needs to be figured out.

Here's one more visible difference to the the current scheme that I noticed a while back in `ThreeValues`.
```scala
scala> object O { final val YES = 1; YES: Byte }

scala> object O { @inline val YES = 1; YES: Byte }
<console>:7: error: type mismatch;
 found   : Int
 required: Byte
       object O { @inline val YES = 1; YES: Byte }
                                       ^                                          ^
```
